# gsp-openmetadata-sidecar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: auto-create-operator-guide.md  entity-emission-api-evidence.md  plan-default-server-db-schema-review.md  plan-default-server-db-schema.md
examples/: bigquery_procedural.sql  mssql_case_sensitivity.sql  mssql_stored_procedure.sql  om_issue_16424_square_brackets.sql  om_issue_17586_procedure_filtered.sql  om_issue_25299_create_procedure_begin_end.sql  om_issue_25299_minimal_working.sql  sidecar.yaml.example
src/gsp_openmetadata_sidecar/: __init__.py  __main__.py  backend.py  cli.py  config.py  emitter.py  entity_planner.py  lineage_mapper.py  sql_input.py
tests/: test_backend.py  test_cli.py  test_config.py  test_emitter.py  test_emitter_integration.py  test_entity_planner.py  test_lineage_mapper.py
tests/fixtures/: __init__.py  sqlflow_responses.py
